# BiGUL

./: BiGUL.cabal  CHANGELOG.md  README.md
playground/: AndroidPermissions.hs  BiYaccDef.hs  CatLens.hs  Containers.hs  GenericDerivingTest.hs  Hu_Join.hs  PairList.hs  PairListState.hs  ReadXML.hs  SwitchIf.hs  TH.hs  THAST.hs  Test.hs  TestGenDTD.hs  TestPolymorphicData.hs  TestRecordData.hs  TestSubTyping.hs  TestTranslation.hs  Util.hs  aggregation.hs  biyacc.casesv.workable.hs  getVsPut.hs  hu_study1.hs  hu_study2.hs  hu_study3.hs  hu_study4.hs  hu_study5.hs  joinInCaseSV.hs  rearrAndUpdateExamples.hs  rearrSV.hs  relationalLens.hs  treeLens.hs  tutorial.hs  vRule.hs
playground/BrulUnjoin/: Brul.hs  Util.hs  projectAndSelection.hs  readme.md
playground/Libraries/: Hu_Prelude.hs  ListStage1.hs  ListStage2.hs  ListTest.hs
playground/test/bookmark/: netscape.dtd
playground/test/bookstore/: books.dtd  books.xml  bookstore.dtd
playground/test/syntaxtree/: abstract.dtd  concrete.dtd
src/GHC/: InOut.hs
src/Generics/: BiGUL.hs
src/Generics/BiGUL/: Error.hs  Interpreter.hs  Lib.hs  PatternMatching.hs  TH.hs
src/Generics/BiGUL/Interpreter/: Unsafe.hs
src/Generics/BiGUL/Lib/: HuStudies.hs  List.hs
